<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:layout_marginTop="@dimen/left_medial_margin_24"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            style="@style/icon"
            android:src="@drawable/ic_place_black_24dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_medium_margin_32"
            android:layout_marginRight="@dimen/right_small_margin_16"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_address"
                    style="@style/edit"
                    android:hint="@string/hint_address"
                    android:inputType="phone"
                    android:text="@string/text_address"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:layout_marginLeft="@dimen/margin_40"
        android:layout_marginTop="@dimen/left_medial_margin_24"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_medium_margin_32"
            android:layout_marginRight="@dimen/right_small_margin_16"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_comment"
                    style="@style/edit"
                    android:hint="@string/hint_comment"
                    android:inputType="phone"
                    android:text="@string/text_comment"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:background="@color/gray_light"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>